Practicando con Facu los Commit

--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=3\n",
+    "print(num)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "num2=8.5\n",
+    "print(type(num2))"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(num))"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nombre=\"Alain\""
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num3=4+5j"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(num3)"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pi = 3.1416"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +174,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a='True'\n",
+    "b=True\n",
+    "a==b"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(a))\n",
+    "print(type(b))"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "sumando = 3 + 4.5"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +250,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3+8j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1+3j\n",
+    "b=2+5j\n",
+    "c=a+b\n",
+    "print(c)"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5+2j)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3+2+2j"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +306,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3*2"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +334,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2**8"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=27/4\n",
+    "print(a)"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "27//4"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +416,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "27%4"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +444,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6*4+3\n"
+   ]
   },
   {
    "attachments": {},
@@ -288,10 +472,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "let1 = \"h\"+\"o\"\n",
+    "let2 = \"l\"+\"a\"\n",
+    "let3 = let1 + let2\n",
+    "print(let3)"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "es falso por que una es una variable tipo entero y el otro es una variable tipo cadena o string\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval=2==\"2\"\n",
+    "print(eval)\n",
+    "print(\"es falso por que una es una variable tipo entero y el otro es una variable tipo cadena o string\")"
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +528,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= 2\n",
+    "b = \"2\"\n",
+    "b =int(b)\n",
+    "print(type(b))\n",
+    "eval = a==b\n",
+    "print(eval)"
+   ]
   },
   {
    "attachments": {},
@@ -333,10 +559,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "daba error por que estamos trabajando con \".\" y no con \",\" para separar numeros\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float('3.8')\n",
+    "print(type(a))\n",
+    "print('daba error por que estamos trabajando con \".\" y no con \",\" para separar numeros')"
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +587,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "-4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "a -= 1\n",
+    "print(a)\n",
+    "a = -3\n",
+    "a -= 1\n",
+    "print(a)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +618,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "Da cuantro por que desplaso el 1 dos posiciones a la izq en binarios\n",
+      "el sistema bienra consta de representar solo con 2 digitos normalmente 0 y 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1 << 2\n",
+    "print(a)\n",
+    "print('Da cuantro por que desplaso el 1 dos posiciones a la izq en binarios')\n",
+    "print('el sistema bienra consta de representar solo con 2 digitos normalmente 0 y 1')"
+   ]
   },
   {
    "attachments": {},
@@ -378,10 +648,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no esta permitido por que sos dierente tipo de operadores\n",
+      "depende, si son el mismo operador y de algún tipo similar siempre daria el mismo resultado\n",
+      "para el mismo tipo de operador pero diferente entre diferentes operadores como vemos a continuación:\n",
+      "4.0 4 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('no esta permitido por que sos dierente tipo de operadores')\n",
+    "print('depende, si son el mismo operador y de algún tipo similar siempre daria el mismo resultado')\n",
+    "print('para el mismo tipo de operador pero diferente entre diferentes operadores como vemos a continuación:')\n",
+    "a = float(2) + float('2')\n",
+    "b = int(2) + int('2')\n",
+    "c = str(2) + str('2')\n",
+    "print(a,b,c)\n"
+   ]
   },
   {
    "attachments": {},
@@ -393,10 +682,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "solo es posible si los convertimos a tipos similares\n",
+      "este texto se repite,, este texto se repite,, este texto se repite,, \n",
+      "este texto se repite,, este texto se repite,, este texto se repite,, 3 veces\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(2)\n",
+    "b = float('2')\n",
+    "c= a + b \n",
+    "print(c)\n",
+    "print(\"solo es posible si los convertimos a tipos similares o los trabajamos todos como string y para repetir\")\n",
+    "var1 = 'este texto se repite,, '\n",
+    "var2 = 3\n",
+    "print(var1 * var2)\n",
+    "print(var1 * var2 + str(var2) + ' veces')\n"
+   ]
   }
  ],
  "metadata": {
@@ -418,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
