--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "es igual a cero\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "if (a > 0):\n",
+    "    print(\"es mayor a cero\")\n",
+    "elif (a < 0):\n",
+    "    print(\"es menor a cero\")\n",
+    "elif (a == 0):\n",
+    "    print(\"es igual a cero\")\n",
+    "else:\n",
+    "    print(\"no  es un entero\")"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son del mismo tipo\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 8\n",
+    "if (type(a) == type(b)):\n",
+    "    print('son del mismo tipo')\n",
+    "else:\n",
+    "    print(\"no son del mismo tipo\")"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +81,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 es impar\n",
+      "2 es par\n",
+      "3 es impar\n",
+      "4 es par\n",
+      "5 es impar\n",
+      "6 es par\n",
+      "8 es par\n",
+      "9 es impar\n",
+      "10 es par\n",
+      "11 es impar\n",
+      "12 es par\n",
+      "13 es impar\n",
+      "14 es par\n",
+      "15 es impar\n",
+      "16 es par\n",
+      "17 es impar\n",
+      "18 es par\n",
+      "19 es impar\n",
+      "20 es par\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (1,2,3,4,5,6,8,9,10,11,12,13,14,15,16,17,18,19,20)\n",
+    "for i in a:\n",
+    "    \n",
+    "    if (i%2 == 0):\n",
+    "        print( str(i) + \" es par\")\n",
+    "    else:\n",
+    "        print( str(i) +' es impar')"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +130,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 elevado a la 3 es:\n",
+      "0\n",
+      "1 elevado a la 3 es:\n",
+      "1\n",
+      "2 elevado a la 3 es:\n",
+      "8\n",
+      "3 elevado a la 3 es:\n",
+      "27\n",
+      "4 elevado a la 3 es:\n",
+      "64\n",
+      "5 elevado a la 3 es:\n",
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,6):\n",
+    "    a = i**3\n",
+    "    print(str(i), \"elevado a la 3 es:\", )\n",
+    "    print(str(a))\n"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +169,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=6\n",
+    "for i in range(0,a):\n",
+    "    print(i)"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +201,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "va\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "i = 1\n",
+    "if (type(n) == type(int()) and n>0):\n",
+    "    while (n>0):\n",
+    "        i *= n\n",
+    "        n -= 1 \n",
+    "    \n",
+    "    print(i)\n",
+    "    print('va')\n",
+    "else:\n",
+    "    print('no es entero mayor a cero')"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +237,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "estamos imprimiendo hasta el:  0\n",
+      "estamos imprimiendo hasta el:  1\n",
+      "estamos imprimiendo hasta el:  2\n",
+      "estamos imprimiendo hasta el:  3\n",
+      "Esta es la vuelta:  5 ***********\n",
+      "estamos imprimiendo hasta el:  0\n",
+      "estamos imprimiendo hasta el:  1\n",
+      "estamos imprimiendo hasta el:  2\n",
+      "estamos imprimiendo hasta el:  3\n",
+      "Esta es la vuelta:  4 ***********\n",
+      "estamos imprimiendo hasta el:  0\n",
+      "estamos imprimiendo hasta el:  1\n",
+      "estamos imprimiendo hasta el:  2\n",
+      "estamos imprimiendo hasta el:  3\n",
+      "Esta es la vuelta:  3 ***********\n",
+      "estamos imprimiendo hasta el:  0\n",
+      "estamos imprimiendo hasta el:  1\n",
+      "estamos imprimiendo hasta el:  2\n",
+      "estamos imprimiendo hasta el:  3\n",
+      "Esta es la vuelta:  2 ***********\n",
+      "estamos imprimiendo hasta el:  0\n",
+      "estamos imprimiendo hasta el:  1\n",
+      "estamos imprimiendo hasta el:  2\n",
+      "estamos imprimiendo hasta el:  3\n",
+      "Esta es la vuelta:  1 ***********\n",
+      "estamos imprimiendo hasta el:  0\n",
+      "estamos imprimiendo hasta el:  1\n",
+      "estamos imprimiendo hasta el:  2\n",
+      "estamos imprimiendo hasta el:  3\n",
+      "Esta es la vuelta:  0 ***********\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 6\n",
+    "b= 4\n",
+    "while a > 0:\n",
+    "    a -= 1\n",
+    "    for i in range (0,b):\n",
+    "        print(\"estamos imprimiendo hasta el: \", i)\n",
+    "    print(\"Esta es la vuelta: \", a, \"***********\")"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +297,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 ciclo while\n",
+      "4 ciclo while\n",
+      "3 ciclo while\n",
+      "2 ciclo while\n",
+      "1 ciclo while\n",
+      "CICLOS PARA TERMINAR:  3\n",
+      "CICLOS PARA TERMINAR:  2\n",
+      "CICLOS PARA TERMINAR:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b = 3\n",
+    "for i in range(0,b):\n",
+    "    while a > 0 :\n",
+    "        a -= 1\n",
+    "        print(a+1, \"ciclo while\")\n",
+    "    print(\"CICLOS PARA TERMINAR: \", b-i)"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +335,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Es un numero primo\n",
+      "2 Es un numero primo\n",
+      "3 Es un numero primo\n",
+      "7 Es un numero primo\n",
+      "11 Es un numero primo\n",
+      "13 Es un numero primo\n",
+      "17 Es un numero primo\n",
+      "19 Es un numero primo\n",
+      "23 Es un numero primo\n",
+      "29 Es un numero primo\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,30):\n",
+    "    if i == 2 or i == 3:\n",
+    "        print(i, \"Es un numero primo\")\n",
+    "    elif i%2 == 0 or i%3==0 or i%5==0:\n",
+    "        pass\n",
+    "        \n",
+    "    else:\n",
+    "        print(i, \"Es un numero primo\")\n"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +376,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "tope_rango=30\n",
+    "n = 0\n",
+    "primo = True\n",
+    "while (n < tope_rango):\n",
+    "    for div in range(2, n):\n",
+    "        if (n % div == 0):\n",
+    "            primo = False\n",
+    "            #break\n",
+    "    if (primo):\n",
+    "        print(n)\n",
+    "    else:\n",
+    "        primo = True\n",
+    "    n += 1"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +424,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "cantidad de ciclos; 378\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "Cantidad de ciclos: 134\n",
+      "Se optimizó a un 0.3544973544973545% de ciclos aplicando break\n"
+     ]
+    }
+   ],
+   "source": [
+    "#contando el numero de ciclos y midiendo el tiempo de ejecucion\n",
+    "ciclos_sin_break = 0\n",
+    "\n",
+    "tope_rango=30\n",
+    "n = 0\n",
+    "primo = True\n",
+    "while (n < tope_rango):\n",
+    "    for div in range(2, n):\n",
+    "        ciclos_sin_break +=1\n",
+    "        if (n % div == 0):\n",
+    "            primo = False\n",
+    "            #break\n",
+    "    if (primo):\n",
+    "        print(n)\n",
+    "    else:\n",
+    "        primo = True\n",
+    "    n += 1\n",
+    "print(\"cantidad de ciclos; \" + str(ciclos_sin_break))\n",
+    "\n",
+    "ciclos_con_break = 0\n",
+    "n = 0\n",
+    "primo = True\n",
+    "while (n < tope_rango):\n",
+    "    for div in range(2, n):\n",
+    "        ciclos_con_break += 1\n",
+    "        if (n % div == 0):\n",
+    "            primo = False\n",
+    "            break\n",
+    "    if (primo):\n",
+    "        print(n)\n",
+    "    else:\n",
+    "        primo = True\n",
+    "    n += 1\n",
+    "print('Cantidad de ciclos: ' + str(ciclos_con_break))\n",
+    "print('Se optimizó a un ' + str(ciclos_con_break/ciclos_sin_break) + '% de ciclos aplicando break')"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +509,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300 Es divisible entre 12\n",
+      "288 Es divisible entre 12\n",
+      "276 Es divisible entre 12\n",
+      "264 Es divisible entre 12\n",
+      "252 Es divisible entre 12\n",
+      "240 Es divisible entre 12\n",
+      "228 Es divisible entre 12\n",
+      "216 Es divisible entre 12\n",
+      "204 Es divisible entre 12\n",
+      "192 Es divisible entre 12\n",
+      "180 Es divisible entre 12\n",
+      "168 Es divisible entre 12\n",
+      "156 Es divisible entre 12\n",
+      "144 Es divisible entre 12\n",
+      "132 Es divisible entre 12\n",
+      "120 Es divisible entre 12\n",
+      "108 Es divisible entre 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 301\n",
+    "b = 100\n",
+    "while (b <= a):\n",
+    "    a-=1 \n",
+    "    if (a%12 != 0):\n",
+    "        continue    \n",
+    "    print(a,\"Es divisible entre 12\")\n",
+    "    \n",
+    "\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
@@ -201,7 +562,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tope_rango = 100\n",
+    "n = 0\n",
+    "primo = True\n",
+    "while (n < tope_rango):\n",
+    "    for div in range(2, n):  #recordar que el rango va de (i hasta j-1 donde es (i,j))\n",
+    "        print(\"este es n\",n, \"entre div\",div)\n",
+    "        if (n % div == 0):\n",
+    "            primo = False\n",
+    "            break\n",
+    "    if (primo):\n",
+    "        print(n)\n",
+    "        a = input(\"quieres el siguiente primo 1 para si 2 para no: \")\n",
+    "        if a != '1':\n",
+    "            print(\"se finalizara el proceso\")\n",
+    "            break\n",
+    "        \n",
+    "    else:\n",
+    "        primo = True\n",
+    "    n += 1\n"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +594,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102 es divisible por 3 y es multiplo de 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 100\n",
+    "#print(a%3,a%6)\n",
+    "while (a%3 != 0 and a%6!=0):\n",
+    "    #print(a%3)\n",
+    "    a += 1\n",
+    "    #for i in range(100,301):\n",
+    "        #continue\n",
+    "    if(a%3 == 0 and a%6==0):\n",
+    "        print(a, \"es divisible por 3 y es multiplo de 6\")\n",
+    "    \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -238,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
