--- a/M08_clasesyOOP/Prep_Course_Homework_08.ipynb
+++ b/M08_clasesyOOP/Prep_Course_Homework_08.ipynb
@@ -21,10 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehiculo:\n",
+    "    def __init__(self,color,tipo_vehiculo,cilindrada):\n",
+    "        self.color = color\n",
+    "        self.tipo_vehiculo = tipo_vehiculo\n",
+    "        self.cilindrada = cilindrada"
+   ]
   },
   {
    "attachments": {},
@@ -39,10 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehiculo:\n",
+    "    def __init__(self,color,tipo_vehiculo,cilindrada):\n",
+    "        self.color = color\n",
+    "        self.tipo_vehiculo = tipo_vehiculo  #auto/camioneta/moto/camion\n",
+    "        self.cilindrada = cilindrada   #del motor\n",
+    "        self.velocidad = 0\n",
+    "        self.direccion = 0\n",
+    "\n",
+    "    def Acelerar(self, vel):    # El metodo es la función en la cual ponemos los comandos para una acción\n",
+    "        self.velocidad += vel  #Método Acelerar recibe parámetro \"vel\" que representa la velocidad a aumentar.\n",
+    "\n",
+    "    def Frenar(self, vel):  # Método Frenar recibe un parámetro \"vel\" que representa la velocidad a disminuir.\n",
+    "        self.velocidad -= vel # Disminuye velocidad actual del vehículo restando el valor de \"vel\" al atributo \"velocidad\".\n",
+    "    \n",
+    "    def Doblar(self, grados): # Método Doblar recibe parámetro \"grados\", representa los grados para girar.\n",
+    "        self.direccion += grados\n",
+    "    def Estado(self):\n",
+    "        return print(\"Velocidad: \", self.velocidad,\"Dirección: \",self.direccion)\n",
+    "    def Presentar(self):\n",
+    "        return print(\"Color: \", self.color ,\"Tipo: \", self.tipo_vehiculo , \"Cilindrada: \", self.cilindrada)\n"
+   ]
   },
   {
    "attachments": {},
@@ -54,10 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prius  = Vehiculo(\"rojo\",\"auto\",1.4) # Creación de un objeto \"Vehiculo\" con color rojo, tipo auto y cilindrada 1.4.\n",
+    "golf   = Vehiculo(\"gris\",\"auto\", 1.4)   # Creación de un objeto \"Vehiculo\" con color gris, tipo camioneta y cilindrada 1.4\n",
+    "ertiga = Vehiculo(\"café\", \"camioneta\", 1.4)  # Creación de un objeto \"Vehiculo\" con color café, tipo moto y cilindrada 1.4\n",
+    "\n",
+    "prius.Acelerar(10)\n",
+    "golf.Frenar(30)\n",
+    "ertiga.Doblar(45)\n",
+    "prius.Acelerar(30)\n",
+    "prius.Frenar(20)\n",
+    "prius.Doblar(45)"
+   ]
   },
   {
    "attachments": {},
@@ -69,10 +107,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Velocidad:  20 Dirección:  45\n",
+      "Color:  rojo Tipo:  auto Cilindrada:  1.4\n",
+      "Velocidad:  0 Dirección:  45\n",
+      "Color:  café Tipo:  camioneta Cilindrada:  1.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "prius.Estado()     #La solución o el codigo estra esta en el punto 2\n",
+    "ertiga.Estado()\n",
+    "ertiga.Presentar()"
+   ]
   },
   {
    "attachments": {},
@@ -91,7 +144,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehiculo:\n",
+    "    def __init__(self,color,tipo_vehiculo,cilindrada):\n",
+    "        self.color = color\n",
+    "        self.tipo_vehiculo = tipo_vehiculo  #auto/camioneta/moto/camion\n",
+    "        self.cilindrada = cilindrada   #del motor\n",
+    "        self.velocidad = 0\n",
+    "        self.direccion = 0\n",
+    "\n",
+    "    def Acelerar(self, vel):    # El metodo es la función en la cual ponemos los comandos para una acción\n",
+    "        self.velocidad += vel  #Método Acelerar recibe parámetro \"vel\" que representa la velocidad a aumentar.\n",
+    "\n",
+    "    def Frenar(self, vel):  # Método Frenar recibe un parámetro \"vel\" que representa la velocidad a disminuir.\n",
+    "        self.velocidad -= vel # Disminuye velocidad actual del vehículo restando el valor de \"vel\" al atributo \"velocidad\".\n",
+    "    \n",
+    "    def Doblar(self, grados): # Método Doblar recibe parámetro \"grados\", representa los grados para girar.\n",
+    "        self.direccion += grados\n",
+    "    def Estado(self):\n",
+    "        return print(\"Velocidad: \", self.velocidad,\"Dirección: \",self.direccion)\n",
+    "    def Presentar(self):\n",
+    "        return print(\"Color: \", self.color ,\"Tipo: \", self.tipo_vehiculo , \"Cilindrada: \", self.cilindrada)\n"
+   ]
   },
   {
    "attachments": {},
@@ -158,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
